--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "description": "Get to know Dilraj via `npx dilraj`.",
   "dependencies": {
+    "chalk": "^4.1.0",
     "cli-welcome": "^2.2.2"
   },
   "keywords": [
