--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "bin": {
     "dilraj": "index.js"
   },
+  "type": "module",
   "description": "Get to know Dilraj via `npx dilraj`.",
   "dependencies": {
     "chalk": "^4.1.0",
-    "cli-welcome": "^2.2.2"
+    "cli-alerts": "^1.2.2",
+    "cli-check-node": "^1.3.4",
+    "cli-handle-error": "^4.4.0",
+    "cli-handle-unhandled": "^1.1.1",
+    "cli-welcome": "^2.2.2",
+    "log-symbols": "^5.0.0",
+    "meow": "^10.1.5"
   },
   "keywords": [
     "dilraj",
